<resources>
    <string name="app_name">MALLet</string>
    <string name="app_logo">M</string>
    <string name="welcome">Welcome to MALLet!</string>
    <string name="choose_next_action">Choose your next action</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="already_a_member">Already a member? \nLog in!</string>
    <string name="create_new_set">Create new set</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="create_new_group">Create new group</string>
    <string name="delete_account">Delete account</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="change_password">Change password</string>
    <string name="dark_mode_theme">System default</string>
    <string name="dark_mode">Dark mode</string>
    <string name="log_out">Log out</string>
    <string name="your_languages">Your languages</string>
    <string name="users_languages">user\'s languages</string>
    <string name="app_version">0.0.0</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="notifications">Notifications</string>
    <string name="save_sets_offline">Save sets for use offline</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup_here">Sign up here</string>
    <string name="by_logging_in_you_accept">By logging in you accept MALLet\'s Terms of service and Privacy policy</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_quickly">or quickly with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="by_signing_up_you_accept">By signing up you accept MALLet\'s Terms of service and Privacy policy</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="to_change_password">To change your password, please follow the instructions</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="confirm_new_password_error">Please, confirm new password</string>
    <string name="input_new_password_error">Please, input new password</string>
    <string name="input_your_password_error">Please, input your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="to_continue_enter_your_password">To continue, please enter your password</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="add_new">Add new</string>
    <string name="your_library">Your library</string>
    <string name="profile">Profile</string>
    <string name="signup_with_email_address">Sign up with your email address</string>
    <string name="login_here">Log in here</string>
    <string name="login_with_email_address">Log in with your email address</string>
    <string name="folder_name">Folder name</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="description_optional">Description (optional)</string>
    <string name="description">Description</string>
    <string name="group_name">Group name</string>
    <string name="allow_group_members">Allow group members to edit sets and add new members</string>
    <string name="color_theme">Color theme</string>
    <string name="notifications_switch">Notifications switch</string>
    <string name="profile_photo">Profile photo</string>
    <string name="save_btn">Save button</string>
    <string name="folders">Folders</string>
    <string name="view_all">View all</string>
    <string name="groups">Groups</string>
    <string name="recent_sets">Recent sets</string>
    <string name="settings_icon">settings icon</string>
    <string name="email_incorrect">Email incorrect</string>
    <string name="password_incorrect">"The password must be at least 8 characters long and contain at least one digit, one small letter, one big letter and one special character"</string>
    <string name="username_incorrect">The username can only consist of letters, numbers, and underscores</string>
    <string name="theme_name">theme_name</string>
    <string name="add_sets">Add sets</string>
    <string name="no_sets_in_this_group">There are no sets in this group</string>
    <string name="add_sets_share_with_friends">Add learning sets to share them with your friends</string>
    <string name="toolbar_options">toolbar options</string>
    <string name="group">Group</string>
    <string name="back_arrow">back arrow</string>
    <string name="nr_of_sets">Number of sets</string>
    <string name="no_sets_in_this_folder">There are no sets in this folder</string>
    <string name="organise_sets_sort_into_folders">Organise your sets by sorting them into folders</string>
    <string name="user_icon">User icon</string>
    <string name="folder">Folder</string>
    <string name="string_members">%s members</string>
    <string name="string_sets">%s sets</string>
    <string name="string_terms">%s terms</string>
    <string name="edit_set">Edit set</string>
    <string name="set_options">set options</string>
    <string name="set_name">Set name</string>
    <string name="add_flashcard">add flashcard</string>
    <string name="do_not_know">do not know</string>
    <string name="undo_swipe">undo swipe</string>
    <string name="know">know</string>
    <string name="content_written_question">content of the written question (definition/translation)</string>
    <string name="your_answer">Your answer</string>
    <string name="write_answer">Write answer…</string>
    <string name="box_needs_to_be_checked">This box needs to be checked</string>
    <string name="swipe_counter">%1$d/%2$d</string>
    <string name="added_users">Added users</string>
    <string name="cd_add_users_fab">add users fab</string>
    <string name="err_group_name_error">group_name_error</string>
    <string name="name">Name</string>
    <string name="cd_save_folder_iv">save folder iv</string>
    <string name="create_folder">Create folder</string>
    <string name="added_sets">Added sets</string>
    <string name="cd_add_sets_fab">add sets fab</string>
    <string name="add_users">Add users</string>
    <string name="err_group_name">group_name_error</string>
    <string name="create_group">Create group</string>
    <string name="vocabulary_in_this_set">Vocabulary in this set</string>
    <string name="cd_delete_set">delete set</string>
    <string name="topic">Topic</string>
    <string name="new_to_mallet_create_account">New to MALLet? \nCreate account!</string>
    <string name="err">err</string>
    <string name="str_continue">Continue</string>
    <string name="term">Term #%s</string>
    <string name="nr_of_terms_singular">%s term</string>
    <string name="nr_of_terms_plural">%s terms</string>
    <string name="motivational_message05">Great start! 🌟 Every journey begins with a single step. \n\nKeep going, and success will follow! 🚀</string>
    <string name="motivational_message510">Nice effort! 👍 You are on your way to mastering this material. \n\nKeep pushing yourself to reach new heights! 🌄</string>
    <string name="motivational_message1015">Well done! 🎉 You are making solid progress. \n\nConsistency is key, and you are proving that with each question 📚</string>
    <string name="motivational_message1520">Fantastic job! 👏 You are really getting the hang of this. \n\nBelieve in your abilities - you are capable of achieving even more! 🌈</string>
    <string name="motivational_message2025">Outstanding! 🌟 You are mastering the material with each passing question. \n\nYour dedication is paying off, keep up the excellent work! 💪</string>
    <string name="motivational_message2530">Incredible performance! 🎊 You are achieving excellence in this test. \n\nYour hard work and determination are shining through. \n\nKeep aiming high! 🚀</string>
    <string name="motivational_message30">Perfect score! 🏆 You have aced the material and demonstrated an impressive level of knowledge. \n\nYour dedication and intelligence are truly commendable. \n\nCongratulations! 🎉</string>
    <string name="you_finished_and_scored">You finished the test in %s seconds and scored %s points! 👏</string>
    <string name="time_minutes_seconds">%s minutes %s seconds</string>
    <string name="time_seconds">%s seconds</string>
    <string name="GROUP_NAME">group_name</string>
    <string name="learning_set">Learning set</string>
    <string name="member">Member</string>
    <string name="cd_toolbar_options">toolbar options</string>
    <string name="there_is_no_vocabulary_here">There is no vocabulary here</string>
    <string name="add">Add</string>
    <string name="SET_NAME">set_name</string>
    <string name="SET_DESCRIPTION">set_description</string>
    <string name="USERNAME">user_name</string>
    <string name="NR_OF_TERMS">nr_of_terms</string>
    <string name="cd_flashcards_icon">flashcards icon</string>
    <string name="flashcards">Flashcards</string>
    <string name="review_terms_and_definitions">Review terms and definitions</string>
    <string name="cd_learn_icon">learn icon</string>
    <string name="learn">Learn</string>
    <string name="study_in_your_own_pace">Study in your own pace</string>
    <string name="cd_test_icon">test icon</string>
    <string name="take_a_test_to_check_your_knowledge">Take a test to check your knowledge</string>
    <string name="cd_match_icon">match icon</string>
    <string name="match">Match</string>
    <string name="match_vocabulary_in_a_simple_minigame">Match vocabulary in a simple minigame</string>
    <string name="flashcards_in_this_set">Flashcards in this set</string>
    <string name="study_this_set">Study this set</string>
    <string name="a_copy_of_the_set_you_choose_will_be_added_to_this_group">A copy of the set you choose will be added to this group</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="match_all_terms_to_definitions_and_translations_for_each_incorrect_match_5_extra_seconds_will_be_awarded_to_your_time">Match all terms to definitions and translations as quickly as you can. \n\nFor each incorrect match, 5 extra seconds will be awarded to your time</string>
    <string name="start_playing">Start playing</string>
    <string name="question">question</string>
    <string name="cd_save_group">save group</string>
    <string name="no_permissions_to_edit">You do not have permissions to edit sets in this group</string>
    <string name="XXX_terms">%s terms</string>
    <string name="delete_set_from_group">Delete set from group</string>
    <string name="delete_set">Delete set</string>
    <string name="in_this_session_you_will_be_asked">Get ready for a series of %s questions 🤔 \n\nMake your answers clear and accurate 🎯 If you\'re not sure, no worries! We\'ll show you the correct ones to learn from 📚 \n\nLet\'s dive in and get started! 💪</string>
    <string name="welcome_to_learn">Welcome to Learn!</string>
    <string name="you_have_covered_all_the_material">Congratulations! 🌟 You\'ve covered all the material! 📚 \n\nNow, you can dive back in for some practice or try out different study modes - it\'s all up to you! 🚀</string>
</resources>