<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/changePassword_mainLl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_corners_rounded"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/changePassword_titleTv"
        style="@style/BasicBoldTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/changePasswordTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_change_password"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePassword_oldTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/danube_blue_700"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/danube_blue_700"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePassword_oldEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textColorHint="@color/downriver_blue_300"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/changePassword_oldErrorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/input_your_password_error"
            android:textColor="@color/carnation_red_600"
            android:visibility="gone" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePassword_newTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/danube_blue_700"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/danube_blue_700"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePassword_newEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/downriver_blue_300"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/changePassword_newErrorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/input_new_password_error"
            android:textColor="@color/carnation_red_600"
            android:visibility="gone" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePassword_confirmNewTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/danube_blue_700"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/danube_blue_700"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePassword_confirmNewEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/downriver_blue_300"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/changePassword_confirmNewErrorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confirm_new_password_error"
            android:textColor="@color/carnation_red_600"
            android:visibility="gone" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:id="@+id/changePassword_cancelConfirmLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/changePassword_cancelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_ripple"
            android:text="@string/cancel"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/changePassword_confirmTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_ripple"
            android:text="@string/ok"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />
</LinearLayout>