<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/verifyPassword_mainLl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_corners_rounded"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/verifyPassword_titleTv"
        style="@style/BasicBoldTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/verifyPasswordTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_continue_enter_your_password"
        android:textColor="@color/secondaryTextColor"
        android:textSize="19sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verifyPasswordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/danube_blue_700"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/danube_blue_700"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verifyPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/downriver_blue_300"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/verifyPassword_errorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/input_your_password_error"
            android:textColor="@color/carnation_red_600"
            android:visibility="gone" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:id="@+id/verifyPassword_cancelConfirmLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/verifyPassword_cancelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_ripple"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/verifyPassword_confirmTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_ripple"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ok"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

</LinearLayout>