<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ready_mainLl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top_corners_rounded"
    android:orientation="vertical"
    android:padding="30dp">


    <TextView
        style="@style/BasicBoldTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one_regular"

        android:text="@string/are_you_ready"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        style="@style/BasicTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/match_all_terms_to_definitions_and_translations_for_each_incorrect_match_5_extra_seconds_will_be_awarded_to_your_time"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/ready_startTv"
        style="@style/BasicTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/bg_ripple"
        android:clickable="true"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/start_playing"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="@color/colorPrimary" />

</LinearLayout>