<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_mainLl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top_corners_rounded"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/createLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/create_setTv"
            style="@style/BasicTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:justificationMode="inter_word"
            android:padding="20dp"
            android:text="@string/create_new_set"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_create_set"
            app:drawableTint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/create_folderTv"
            style="@style/BasicTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bg_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:justificationMode="inter_word"
            android:padding="20dp"
            android:text="@string/create_new_folder"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_create_folder"
            app:drawableTint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/create_groupTv"
            style="@style/BasicTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:justificationMode="inter_word"
            android:padding="20dp"
            android:text="@string/create_new_group"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_create_group"
            app:drawableTint="@color/colorPrimaryDark" />
    </LinearLayout>
</LinearLayout>